--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,1 +1,35 @@
-#temp
+name: 'Redeploy'
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+jobs:
+  checkout-repository:
+    runs-on: [actuary]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          repository: 'Actuary-LLC/task'
+          ref: 'main'       
+  redeploy-service:
+    needs: checkout-repository
+    runs-on: [self-hosted]
+    env:
+      VIKUNJA_DATABASE_USER: ${{ vars.POSTGRES_USER }}
+      VIKUNJA_DATABASE_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      VIKUNJA_SERVICE_JWTSECRET: ${{ secrets.SECRET_VIKUNJA }}
+    steps:
+      - name: Remove and redeploy services
+        run: |
+          SERVICES=("service_task") 
+          for SERVICE_NAME in "${SERVICES[@]}"; do
+            if docker service ls | grep -q $SERVICE_NAME; then
+              docker service rm $SERVICE_NAME;
+              echo "Service $SERVICE_NAME removed."
+            else echo "Service $SERVICE_NAME is not running."
+            fi
+          done
+      - run: docker stack deploy -c task.yaml service
