--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
     env:
       VIKUNJA_DATABASE_USER: ${{ vars.POSTGRES_USER }}
       VIKUNJA_DATABASE_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      VIKUNJA_SERVICE_JWTSECRET: ${{ secrets.SECRET_VIKUNJA }}
+      VIKUNJA_SERVICE_JWTSECRET: ${{ secrets.VIKUNJA_SERVICE_JWTSECRET }}
       TAG: ${{ github.sha }}
     steps:
       - name: Remove and redeploy services
