--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - name: Remove and redeploy services
         run: |
-          SERVICES=("service_task") 
+          SERVICES=("task_vikunja") 
           for SERVICE_NAME in "${SERVICES[@]}"; do
             if docker service ls | grep -q $SERVICE_NAME; then
               docker service rm $SERVICE_NAME;
@@ -33,4 +33,4 @@ jobs:
             else echo "Service $SERVICE_NAME is not running."
             fi
           done
-      - run: docker stack deploy -c task.yaml service
+      - run: docker stack deploy -c task.yaml task
