--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
 auth:
+  local:
+    enabled: false
   openid:
     enabled: true
-    redirecturl: "https://task.actuary.dev/auth/openid/"
+    #redirecturl: "https://task.actuary.dev/auth/openid/"
     providers:
-      - name: authentik
+      - name: "authentik login"
         authurl: "https://authentik.actuary.dev/application/o/vikunja"
         logouturl: "https://authentik.actuary.dev/application/o/vikunja/end-session/"
         clientid: "$AUTHENTIK_ID_VIKUNJA"
