--- a/config.yaml
+++ b/config.yaml
@@ -3,10 +3,10 @@ auth:
     enabled: false
   openid:
     enabled: true
-    #redirecturl: "https://task.actuary.dev/auth/openid/"
+    redirecturl: "https://task.actuary.dev/auth/openid/"
     providers:
       - name: "authentik login"
-        authurl: "https://authentik.actuary.dev/application/o/vikunja"
-        logouturl: "https://authentik.actuary.dev/application/o/vikunja/end-session/"
-        clientid: "$AUTHENTIK_ID_VIKUNJA"
-        clientsecret: "$AUTHENTIK_SECRET_VIKUNJA"
+        authurl: https://authentik.actuary.dev/application/o/vikunja
+        logouturl: https://authentik.actuary.dev/application/o/vikunja/end-session/
+        clientid: ${AUTHENTIK_ID_VIKUNJA}
+        clientsecret: ${AUTHENTIK_SECRET_VIKUNJA}
