--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,8 @@ jobs:
       VIKUNJA_DATABASE_USER: ${{ vars.POSTGRES_USER }}
       VIKUNJA_DATABASE_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       VIKUNJA_SERVICE_JWTSECRET: ${{ secrets.VIKUNJA_SERVICE_JWTSECRET }}
+      AUTHENTIK_ID_VIKUNJA: ${{ vars.AUTHENTIK_ID_VIKUNJA }}
+      AUTHENTIK_SECRET_VIKUNJA: ${{ secrets.AUTHENTIK_SECRET_VIKUNJA }}
       TAG: ${{ github.sha }}
     steps:
       - name: Remove and redeploy services
