--- a/task.yaml
+++ b/task.yaml
@@ -29,6 +29,9 @@ services:
       VIKUNJA_DATABASE_DATABASE: vikunja
       VIKUNJA_DATABASE_PASSWORD: ${VIKUNJA_DATABASE_PASSWORD}
       VIKUNJA_DATABASE_USER: ${VIKUNJA_DATABASE_USER}
+      #Authentik
+      AUTHENTIK_ID_VIKUNJA: ${{ vars.AUTHENTIK_ID_VIKUNJA }}
+      AUTHENTIK_SECRET_VIKUNJA: ${{ secrets.AUTHENTIK_SECRET_VIKUNJA }}
       #Cache
       VIKUNJA_CACHE_TYPE: redis
       VIKUNJA_REDIS_HOST: 'unraid.lan:6379'
