--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,9 @@ jobs:
           sed -i 's/${AUTHENTIK_ID_VIKUNJA}/${{ secrets.AUTHENTIK_ID_VIKUNJA }}/' config.yaml
           sed -i 's/${AUTHENTIK_SECRET_VIKUNJA}/${{ secrets.AUTHENTIK_SECRET_VIKUNJA }}/' config.yaml
           cat config.yaml
+      - name: Sleep for 30 seconds
+        run: sleep 150s
+        shell: bash
   deploy-task:
     needs: checkout-repository
     runs-on: [traefik]
