--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
           AUTHENTIK_SECRET_VIKUNJA: ${{ secrets.AUTHENTIK_SECRET_VIKUNJA }}
       - name: Configure application
         run: |
-          sed -i 's/${AUTHENTIK_ID_VIKUNJA}/${{ secrets.AUTHENTIK_ID_VIKUNJA }}/' config.yaml
+          sed -i 's/${AUTHENTIK_ID_VIKUNJA}/${{ vars.AUTHENTIK_ID_VIKUNJA }}/' config.yaml
           sed -i 's/${AUTHENTIK_SECRET_VIKUNJA}/${{ secrets.AUTHENTIK_SECRET_VIKUNJA }}/' config.yaml
           cat config.yaml
       - name: Sleep for 30 seconds
