--- a/task.yaml
+++ b/task.yaml
@@ -48,7 +48,7 @@ services:
         - homepage.description=Project management
         - homepage.name=Vikunja
         - homepage.icon=https://kolaente.dev/avatars/dd73c49581a6904336c5d40fb66ef950
-        - homepage.href=task_vikunja
+        - homepage.href=vikunja
 
     volumes:
       - /mnt/user/docker/volumes/vikunja:/app/vikunja/files
