--- a/task.yaml
+++ b/task.yaml
@@ -48,8 +48,8 @@ services:
         - homepage.description=Project management
         - homepage.name=Vikunja
         - homepage.icon=https://kolaente.dev/avatars/dd73c49581a6904336c5d40fb66ef950
-        - homepage.service=task
-        - homepage.container=vikunja
+        - homepage.server=my-docker
+        - homepage.container=task_vikunja
 
     volumes:
       - /mnt/user/docker/volumes/vikunja:/app/vikunja/files
