--- a/task.yaml
+++ b/task.yaml
@@ -50,6 +50,7 @@ services:
         - homepage.icon=https://kolaente.dev/avatars/dd73c49581a6904336c5d40fb66ef950
         - homepage.server=my-docker
         - homepage.container=task_vikunja
+        - homepage.href=https://task.actuary.dev
 
     volumes:
       - /mnt/user/docker/volumes/vikunja:/app/vikunja/files
